@@ -1,3 +1,6 @@
+3646.	[bug]		Journal filename string could be set incorrectly,
+                        causing garbage in log messages.  [RT #34738]
+
 	--- 9.9.4 released ---
 
 3643.	[doc]		Clarify RRL "slip" documentation.
